# AntiScreenSaver

./: .gitignore  CLAUDE.md  README.md  build.bat  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
config/: default_config.json
docs/: INSTALL.md
specs/001-anti-screensaver-mouse-mover/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-anti-screensaver-mouse-mover/contracts/: README.md  core_contracts.py
src/: __init__.py  controller.py  main.py
src/core/: __init__.py  config.py  contracts.py  exceptions.py  instance_lock.py  models.py  mouse_mover.py  state.py
src/gui/: __init__.py  main_window.py  tray_icon.py  widgets.py
src/platform/: __init__.py  windows.py
